data/Ahy7nueH.txt
[3/131] /usr/bin/ccache /usr/lib64/ccache/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DBOOST_MPL_CFG_NO_PREPROCESSED_HEADERS -DBOOST_MPL_LIMIT_LIST_SIZE=30 -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -Isrc/include -I../src -I../src/dmclock/src -I../src/dmclock/support/src -isystem boost/include -isystem include -isystem ../src/xxHash -isystem ../src/rapidjson/include -isystem ../src/rocksdb/include -isystem ../src/jaegertracing/opentelemetry-cpp/api/include -isystem ../src/jaegertracing/opentelemetry-cpp/exporters/jaeger/include -isystem ../src/jaegertracing/opentelemetry-cpp/ext/include -isystem ../src/jaegertracing/opentelemetry-cpp/sdk/include -O0 -g3 -gdwarf-4 -Og -g -fPIC -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -DCEPH_DEBUG_MUTEX -fstack-protector-strong -D_GLIBCXX_ASSERTIONS -fdiagnostics-color=auto -std=c++2a -MD -MT src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o -MF src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o.d -o src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o -c ../src/osd/scrubber/osd_scrub_sched.cc
FAILED: src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o 
/usr/bin/ccache /usr/lib64/ccache/g++ -DBOOST_ASIO_DISABLE_THREAD_KEYWORD_EXTENSION -DBOOST_ASIO_USE_TS_EXECUTOR_AS_DEFAULT -DBOOST_MPL_CFG_NO_PREPROCESSED_HEADERS -DBOOST_MPL_LIMIT_LIST_SIZE=30 -DHAVE_CONFIG_H -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE -D_REENTRANT -D_THREAD_SAFE -D__CEPH__ -D__STDC_FORMAT_MACROS -D__linux__ -Isrc/include -I../src -I../src/dmclock/src -I../src/dmclock/support/src -isystem boost/include -isystem include -isystem ../src/xxHash -isystem ../src/rapidjson/include -isystem ../src/rocksdb/include -isystem ../src/jaegertracing/opentelemetry-cpp/api/include -isystem ../src/jaegertracing/opentelemetry-cpp/exporters/jaeger/include -isystem ../src/jaegertracing/opentelemetry-cpp/ext/include -isystem ../src/jaegertracing/opentelemetry-cpp/sdk/include -O0 -g3 -gdwarf-4 -Og -g -fPIC -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free -Wall -fno-strict-aliasing -fsigned-char -Wtype-limits -Wignored-qualifiers -Wpointer-arith -Werror=format-security -Winit-self -Wno-unknown-pragmas -Wnon-virtual-dtor -Wno-ignored-qualifiers -ftemplate-depth-1024 -Wpessimizing-move -Wredundant-move -Wstrict-null-sentinel -Woverloaded-virtual -DCEPH_DEBUG_MUTEX -fstack-protector-strong -D_GLIBCXX_ASSERTIONS -fdiagnostics-color=auto -std=c++2a -MD -MT src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o -MF src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o.d -o src/osd/CMakeFiles/osd.dir/scrubber/osd_scrub_sched.cc.o -c ../src/osd/scrubber/osd_scrub_sched.cc
../src/osd/scrubber/osd_scrub_sched.cc: In member function ‘ScrubQueue::scrub_schedule_t ScrubQueue::adjust_target_time(const ScrubQueue::sched_params_t&) const’:
../src/osd/scrubber/osd_scrub_sched.cc:549:45: error: ‘group_digits’ is not a member of ‘fmt’
  549 |                   times.proposed_time, fmt::group_digits(times.min_interval),
      |                                             ^~~~~~~~~~~~
../src/osd/scrubber/osd_scrub_sched.cc:550:24: error: ‘group_digits’ is not a member of ‘fmt’
  550 |                   fmt::group_digits(conf()->osd_scrub_min_interval),
      |                        ^~~~~~~~~~~~
../src/osd/scrubber/osd_scrub_sched.cc:551:24: error: ‘group_digits’ is not a member of ‘fmt’
  551 |                   fmt::group_digits(times.max_interval),
      |                        ^~~~~~~~~~~~
../src/osd/scrubber/osd_scrub_sched.cc:552:24: error: ‘group_digits’ is not a member of ‘fmt’
  552 |                   fmt::group_digits(conf()->osd_scrub_max_interval),
      |                        ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.

